# cmake-template

./: .gitignore  CMakeLists.txt  Makefile
examples/: example.cpp
mylib/: mylib.h
src/: mylib.cpp
